nobase_lib_LTLIBRARIES = smrender/libsmrender.la
smrender_libsmrender_la_SOURCES = bstring.c bxtree.c lists.c osm_func.c smlog.c smutil.c
smrender_libsmrender_la_LDFLAGS = -no-undefined -version-info 2:1:2
include_HEADERS = smrender.h
noinst_HEADERS = bstring.h bxtree.h lists.h osm_inplace.h smaction.h

